@@ -7,7 +7,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 
 public final class Lox {
@@ -29,7 +29,7 @@ public final class Lox {
   }
 
   private static void runFile(String path) throws IOException {
-    byte[] bytes = Files.readAllBytes(Paths.get(path));
+    byte[] bytes = Files.readAllBytes(Path.of(path));
     run(new String(bytes, StandardCharsets.UTF_8));
 
     // Indicate an error in an exit code.
